src/assets/scss/blocks/_switcher.scss
.switcher {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	margin: 0.5rem;
	border-radius: 1px;
	box-shadow: var(--switcher-box-shadow);
	border: none;

	&__preview {
		display: flex;
		justify-content: center;
		align-items: flex-start;
		padding: 1rem;
		position: relative;
	}

	[id='wallpaper-preview'] {
		width: 153px;
		height: 112px;
		position: absolute;
		top: 2rem;
		background-size: 16px 16px;
		transform: translateX(-1px);
		background-color: var(--root-background-color, #000);
		background-image: var(--wallpaper, none);
		background-size: var(--preview-size, 22.5% auto);
		background-repeat: var(--repeat, repeat);
		background-position: var(--position, auto);

		&::after {
			content: '';
			position: absolute;
			inset: 0;
			background-image: var(
				--theme-preview,
				url('/src/assets/themes/default.png')
			);
			background-size: 100% 100%;
		}
	}

	&__form--inner {
		position: relative;
		padding: 0.5rem;
		font-size: 0.85em;
	}

	&__heading {
		position: absolute;
		top: 0.6rem;
		left: 1.25rem;
		display: inline-block;
		background-color: var(--window-background-color);
		transform: translateY(-50%);
		font-weight: 400;
	}

	&__settings {
		display: flex;
		flex-wrap: wrap;
		gap: 0.25rem 1rem;
		border: 1px solid rgba(0, 0, 0, 0);
		padding: 0.75rem;
		box-shadow: var(--switcher-fieldset-box-shadow);
	}

	&__fieldset {
		display: grid;
		position: relative;
		flex: 1;
		height: 8rem;
		border: 0 none;
		gap: 0.25rem 1rem;
	}

	&__fieldset legend {
		margin-bottom: 0.25rem;
	}

	&__wallpapers {
		width: 100%;
		height: 100%;
		background-color: var(--switcher-wallpapers-background-color, #fff);
		overflow: auto;
		padding: 5px;
		border: 1px solid rgba(0, 0, 0, 0);
		box-shadow: var(--switcher-wallpapers-box-shadow);
	}

	&__wallpapers[data-placeholder] {
		opacity: 0;
	}

	&__wallpapers:not([data-placeholder]) {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
	}

	.wallpaper {
		display: flex;
		gap: 0.5ch;
	}

	.wallpaper input[type='radio'] {
		position: absolute;
		opacity: 0.00001;
		width: 1rem;
		height: 1rem;
	}

	.wallpaper input[type='radio'].applied ~ span {
		border: 1px dotted currentColor;
	}

	.wallpaper input[type='radio']:focus ~ span {
		margin: 0;
		background-color: var(--switcher-input-active-background-color);
		color: #fff;
	}

	.wallpaper img {
		display: inline;
		width: 1rem;
		height: 1rem;
		vertical-align: text-bottom;
	}

	.wallpaper span {
		display: block;
		overflow: hidden;
		text-overflow: ellipsis;
	}

	&__controls {
		display: flex;
		justify-content: space-between;
		align-self: flex-end;
		flex-direction: column;
		height: 6.75rem;
	}

	&__browse {
		position: relative;
	}

	&__browse--outline {
		display: block;
		position: absolute;
		inset: 0;
		pointer-events: none;
	}

	&__browse input[name='browse'] {
		position: absolute;
		top: 0;
		left: 0;
		width: 0;
		min-width: 100%;
		opacity: 0;
		pointer-events: none;
	}

	input[name='browse']:focus + &__browse--outline {
		outline: 2px solid currentColor;
	}

	&__buttons {
		display: flex;
		justify-content: flex-end;
		align-items: center;
		gap: 0.5rem;
		margin-top: 1rem;
	}

	&__button {
		display: block;
		padding: 0.15rem 1.25rem;
		border-radius: 0;
		background-color: var(--buttons-background-color);
		box-shadow: var(--buttons-box-shadow);
		cursor: pointer;
		flex: 0 1 11ch;

		&:active {
			outline: 1px dotted currentColor;
			outline-offset: -4px;
		}
	}

	&__button[id='settings-ok-btn'] {
		box-shadow: var(--ok-button-box-shadow);
	}

	select {
		display: block;
		width: 100%;
	}
}

